--- a/static/css/void.css
+++ b/static/css/void.css
@@ -180,6 +180,9 @@ h1.article-title {
 	line-height: 1.4em;
 	font-size: 18px;
 }
+.article-content ol {
+    font-size: 16px;
+}
 
 .article-sharing {
 	margin: 0 auto;
