--- a/templates/base.html
+++ b/templates/base.html
@@ -9,19 +9,37 @@
 
 	<!-- Basic Page Needs
   ================================================== -->
-	<meta charset="utf-8">
+  <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="google-site-verification" content="AgIAQN_qsniIQWOq659Bnhzx-LZts2FdgP1kLgtQg-k" />
 
   <title>{% block title %}{% endblock %}</title>
 
-	<meta name="description" content="{% block metadesc %}{% endblock %}">
-	<meta name="author" content="{{ AUTHOR }}">
+  <meta name="description" content="{% block metadesc %}{% endblock %}">
+  <meta name="author" content="{{ AUTHOR }}">
   <meta name="copyright" content="&copy; Copyright Greg Reda, 2013 to Present">
 
   <!-- Mobile Specific Metas
   ================================================== -->
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+
+
+  <!-- Fonts 
+  ================================================== -->
+  <link href='http://fonts.googleapis.com/css?family=Droid+Sans|Source+Code+Pro|Droid+Serif' rel='stylesheet' type='text/css'>
+
+  <!-- CSS
+  ================================================== -->
+  {% assets filters="cssmin", output="css/style.min.css", "css/base.css", "css/skeleton.css", "css/layout.css", "css/void.css", "css/pygment.css" %}
+  <link rel="stylesheet" href="/{{ ASSET_URL }}">
+  {% endassets %}
+  <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
+
+
+  <!-- JavaScript
+  =================================================== -->
+  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+  <script type="text/javascript" src="//cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
 
   {% if FEED_ALL_ATOM %}
   <!-- Feeds
@@ -43,24 +61,9 @@
   {% block twittercards %}{% endblock %}
   {% endif %}
 
-	<!-- CSS
-  ================================================== -->
-	<link rel="stylesheet" href="/theme/css/base.css">
-	<link rel="stylesheet" href="/theme/css/skeleton.css">
-	<link rel="stylesheet" href="/theme/css/layout.css">
-	<link rel="stylesheet" href="/theme/css/void.css">
-	<link rel="stylesheet" href="/theme/css/pygment.css">
-	<link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
-
 	<!--[if lt IE 9]>
 		<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
 	<![endif]-->
-
-	<!-- JavaScript
-	=================================================== -->
-	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-  <script type="text/javascript"
-  src="//cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
 
   {% if article %}
     {% if article.styles %}
