make JS non-blocking

--- a/templates/base.html
+++ b/templates/base.html
@@ -36,10 +36,6 @@
   <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
 
 
-  <!-- JavaScript
-  =================================================== -->
-  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-  <script type="text/javascript" src="//cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
 
   {% if FEED_ALL_ATOM %}
   <!-- Feeds
@@ -113,6 +109,11 @@
     });
   </script>
 </body> <!-- End body -->
+
+<!-- JavaScript
+=================================================== -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+<script type="text/javascript" async src="//cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
 
 {% if TWITTER_NAME or TWITTER_CARDS %}
 <!-- twitter.js
