--- a/templates/404.html
+++ b/templates/404.html
@@ -1,14 +1,13 @@
-{% extends "base.html" %}
-{% block title %}Page not found{% endblock %}
+{% extends 'base.html' %}
+{% block title %}{{ page.title }}{% endblock %}
 
 {% block content %}
-  <h1>404 - Page Not Found</h1>
-  <p>Oh no! I couldn't find the page you were looking for. Head back to the <a href="{{ SITEURL }}">homepage</a> or read some of my recent posts instead.</p>
-
-  {% for article in articles|sort(attribute='date', reverse=True)[:4] %}
-    <h2 class="article-title"><a href="/{{ article.url }}" title="Permalink to {{ article.title }}">{{article.title}}</a></h2>
-    <h5 class="article-date">{{ article.date|strftime('%B %d, %Y') }}</h5>
-    <hr class="small"></hr>
+  <h1 class="article-title" >{{ page.title }}</h1>
+  <div class="article-content"><p>{{ page.content }}</p></div>
+  <hr class="large"></hr>
+  {% for article in articles[:5] %}
+    <h2 class="article-title pull-left"><a href="/{{ article.url }}" title="Permalink to {{ article.title }}">{{article.title}}</a></h2>
+    <h5 class="article-date pull-right">{{ article.date|strftime('%B %d, %Y') }}</h5>
+    <hr class="large"></hr>
   {% endfor %}
-
 {% endblock %}
