--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -53,7 +53,7 @@
 
   <div class="navbar-links">
       <ul>
-        <li><a href="/about">About</a></li>
+        <li><a href="/about/">About</a></li>
         <!-- <li><a href="/work">Work</a></li> -->
         <!-- <li><a href="/hire">Consulting</a></li> -->
       </ul> <!-- End navbar-links ul -->
