add coffee page

--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -54,8 +54,7 @@
   <div class="navbar-links">
       <ul>
         <li><a href="/about/">About</a></li>
-        <!-- <li><a href="/work">Work</a></li> -->
-        <!-- <li><a href="/hire">Consulting</a></li> -->
+        <li><a href="/coffee/">Coffee?</a></li>
       </ul> <!-- End navbar-links ul -->
     </div> <!-- End navbar-links -->
 </nav> <!-- End navbar -->
