--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -54,6 +54,7 @@
   <div class="navbar-links">
       <ul>
         <li><a href="/about/">About</a></li>
+        <li><a href="/blog/">Blog</a></li>
         <li><a href="/coffee/">Coffee?</a></li>
       </ul> <!-- End navbar-links ul -->
     </div> <!-- End navbar-links -->
