font changes. we'll see how long i keep these.

--- a/templates/base.html
+++ b/templates/base.html
@@ -25,7 +25,7 @@
 
   <!-- Fonts 
   ================================================== -->
-  <link href='http://fonts.googleapis.com/css?family=Droid+Sans|Source+Code+Pro|Droid+Serif' rel='stylesheet' type='text/css'>
+  <link href='http://fonts.googleapis.com/css?family=Open+Sans|Merriweather|Source+Code+Pro' rel='stylesheet' type='text/css'>
 
   <!-- CSS
   ================================================== -->
