--- a/static/css/void.css
+++ b/static/css/void.css
@@ -12,7 +12,7 @@ html, body {
 	color: #2E2E2E !important;
 }
 h1, h2, h3, h4, h5, h6 {
-	font-family: "Droid Serif", serif;
+	font-family: "Merriweather", serif;
 	margin-top: 20px;
 }
 h1 { font-size: 28px; }
@@ -114,7 +114,7 @@ please email me.
 .navbar-links a {
   text-decoration: none;
   text-transform: uppercase;
-  font-family: 'Droid Sans', sans-serif;
+  font-family: 'Open Sans', sans-serif;
 	font-size: 1.1rem;
 	line-height: 2rem;
 }
@@ -171,7 +171,7 @@ h1.article-title {
 
 .article-content p {
 	margin: 12px 0px 12px 0px !important;
-	font-family: 'Droid Sans', sans-serif;
+	font-family: 'Open Sans', sans-serif;
 	font-weight: 400;
 	line-height: 1.4em;
 	font-size: 18px;
