Remove IPyNB cell numbering; closes #1

--- a/templates/article.html
+++ b/templates/article.html
@@ -67,4 +67,8 @@
     </div>
     <hr class="small"></hr>
   </div>
+  <script>
+    // hide ipython notebook cell numbers
+    $('div.prompt').hide();
+  </script>
 {% endblock %}
