--- a/templates/article.html
+++ b/templates/article.html
@@ -69,6 +69,7 @@
   </div>
   <script>
     // hide ipython notebook cell numbers
-    $('div.prompt').hide();
+  $('div.prompt').hide();
+  $('div.cell').css('margin', '0');
   </script>
 {% endblock %}
