remove /coffee link

--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -54,7 +54,7 @@
   <div class="navbar-links">
       <ul>
         <li><a href="/blog/">Blog</a></li>
-        <li><a href="/coffee/">Coffee?</a></li>
+        <!--        <li><a href="/coffee/">Coffee?</a></li> -->
       </ul> <!-- End navbar-links ul -->
     </div> <!-- End navbar-links -->
 </nav> <!-- End navbar -->
