Add HN share button

--- a/templates/article.html
+++ b/templates/article.html
@@ -76,6 +76,12 @@
           data-layout="button_count">
       </div></li>
       {% endif %}
+
+      {% if HACKER_NEWS_SHARE %}
+      <!-- Hacker NewsSharing
+      ================================================================== -->
+      <li><a href="https://news.ycombinator.com/submit" class="hn-button" data-count="horizontal">Vote on Hacker News</a></li>
+      {% endif %}
       </ul>
     </div>
 
