--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -4,7 +4,7 @@
   <div class="navbar-brand six columns">
       <ul>
         <li>
-          <a href="/" title="Home"><img id="logo" src="/theme/images/avatar.jpg" alt="Me (Greg Reda, GrubHub-ified)"></a>
+          <a href="/" title="Home"><img id="logo" src="{{ LOGO_IMAGE }}" alt="{{ SITENAME }}"></a>
         </li>
         <li>
           <h1><a href="/" title="Home">{{ SITENAME }}</a></h1>
@@ -29,7 +29,6 @@
   <div class="navbar-links">
       <ul>
         <li><a href="/blog/">Blog</a></li>
-        <!--        <li><a href="/coffee/">Coffee?</a></li> -->
       </ul> <!-- End navbar-links ul -->
     </div> <!-- End navbar-links -->
 </nav> <!-- End navbar -->
