--- a/templates/base.html
+++ b/templates/base.html
@@ -11,14 +11,12 @@
   ================================================== -->
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <meta name="google-site-verification" content="AgIAQN_qsniIQWOq659Bnhzx-LZts2FdgP1kLgtQg-k" />
-  <meta name="google-site-verification" content="-wneVy0z_MWocNaXikWZzyTe__HZbZDCRfLYEJ1sAg8" />
 
   <title>{% block title %}{% endblock %}</title>
 
   <meta name="description" content="{% block metadesc %}{% endblock %}">
   <meta name="author" content="{{ AUTHOR }}">
-  <meta name="copyright" content="&copy; Copyright Greg Reda, 2013 to Present">
+  <meta name="copyright" content="&copy; Copyright {{ SITENAME }}, {{ COPYRIGHT_START_YEAR }} to Present">
 
   <!-- Mobile Specific Metas
   ================================================== -->
@@ -31,7 +29,7 @@
 
   <!-- CSS
   ================================================== -->
-  {% assets filters="cssmin", output="css/style.min.css", "css/base.css", "css/skeleton.css", "css/layout.css", "css/void.css", "css/pygment.css" %}
+  {% assets filters="cssmin", output="css/style.min.css", "css/base.css", "css/skeleton.css", "css/layout.css", "css/void.css", "css/default.css" %}
   <link rel="stylesheet" href="/{{ ASSET_URL }}">
   {% endassets %}
 
@@ -61,7 +59,7 @@
 
 	<!-- Favicons
 	================================================== -->
-	<link rel="shortcut icon" href="/theme/images/favicon.ico">
+	<link rel="shortcut icon" href="{{ FAVICON_IMAGE }}">
 	<link rel="apple-touch-icon" href="/theme/images/apple-touch-icon.png">
 	<link rel="apple-touch-icon" sizes="72x72" href="/theme/images/apple-touch-icon-72x72.png">
 	<link rel="apple-touch-icon" sizes="114x114" href="/theme/images/apple-touch-icon-114x114.png">
