--- a/static/css/void.css
+++ b/static/css/void.css
@@ -170,8 +170,27 @@ h1.article-title { line-height: normal; }
 	line-height: 1.4em;
 	font-size: 18px;
 }
-.article-content ol {
-    font-size: 16px;
+.article-content > ol, ul {
+	font-size: 16px;
+}
+.article-content > ul {
+   list-style-type: disc;
+   list-style-position: outside;
+	 margin-left: 20px;
+}
+.article-content > ol {
+   list-style-type: decimal;
+   list-style-position: outside;
+}
+.article-content > ul ul, ol ul {
+   list-style-type: circle;
+   list-style-position: outside;
+   margin-left: 15px;
+}
+.article-content > ol ol, ul ol {
+   list-style-type: lower-latin;
+   list-style-position: outside;
+   margin-left: 15px;
 }
 .caption { font-size: 12px !important; }
 blockquote {
