--- a/templates/article.html
+++ b/templates/article.html
@@ -48,6 +48,8 @@
   <!-- Article Content
   ================================================================== -->
   <div class="article-content">
+  <p><em>Want to work together? My team at <a href="https://sproutsocial.com/">Sprout Social</a> is looking for a <a href="http://sproutsocial.theresumator.com/apply/4HgjTU">Senior Data Scientist</a></em>.</p>
+  <hr class="small"></hr>
     {{ article.content }}
   </div>
 
