--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -28,6 +28,7 @@
 
   <div class="navbar-links">
       <ul>
+        <li><a href="/now/">Now</a></li>
         <li><a href="/blog/">Blog</a></li>
       </ul> <!-- End navbar-links ul -->
     </div> <!-- End navbar-links -->
