--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -23,6 +23,11 @@
             <i class="fa fa-rss"></i>
           </a>
         </li>
+        <li>
+          <a class="icon" href="mailto:gjreda@gmail.com" title="Email">
+            <i class="fa fa-envelope-o"></i>
+          </a>
+        </li>
       </ul> <!-- End social-icons ul -->
     </div> <!-- End navbar-brand -->
 
