--- a/templates/base.html
+++ b/templates/base.html
@@ -1,8 +1,5 @@
 <!DOCTYPE html>
-<!--[if lt IE 7 ]><html class="ie ie6" lang="en"> <![endif]-->
-<!--[if IE 7 ]><html class="ie ie7" lang="en"> <![endif]-->
-<!--[if IE 8 ]><html class="ie ie8" lang="en"> <![endif]-->
-<!--[if (gte IE 9)|!(IE)]><!--><html lang="en"> <!--<![endif]-->
+<html lang="en">
 <head>
 
   {% block header %}{% endblock %}
@@ -10,7 +7,7 @@
 	<!-- Basic Page Needs
   ================================================== -->
   <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+  <meta http-equiv="x-ua-compatible" content="ie=edge">
 
   <title>{% block title %}{% endblock %}</title>
 
