--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -33,7 +33,8 @@
 
   <div class="navbar-links">
       <ul>
-        <li><a href="/now/">Now</a></li>
+        <li><a href="/about/">About</a></li>
+        <li><a href="/talks/">Talks</a></li>
         <li><a href="/blog/">Blog</a></li>
       </ul> <!-- End navbar-links ul -->
     </div> <!-- End navbar-links -->
