--- a/templates/tag.html
+++ b/templates/tag.html
@@ -14,8 +14,8 @@
       <hr class="large">
     {% endif %}
   {% endfor %}
-  <div class="back-to-home">
+  <!-- <div class="back-to-home">
     <a href="/">← Back to Home</a>
-  </div>
+  </div> -->
   <hr class="small"></hr>
 {% endblock %}
