--- a/static/css/void.css
+++ b/static/css/void.css
@@ -126,6 +126,10 @@ a, a:visited {
 	font-weight: bold;
 }
 
+/* div.article-content > a, a:visited {
+	border-bottom: 3px solid #7ef1f9;
+} */
+
 a.icon, a:visited.icon, a:active.icon {
 	font-size: 17px;
 	color: #555;
@@ -164,11 +168,15 @@ h1.article-title { line-height: normal; }
 .article-content { clear: both; overflow: hidden; }
 /*.article-content img { border: 1px solid #222; }*/
 .article-content p {
-	margin: 12px 0px 12px 0px !important;
-	font-family: 'Open Sans', sans-serif;
+	margin: 20px 0px 20px 0px !important;
+	font-family: 'Open Sans';
 	font-weight: 400;
-	line-height: 1.4em;
+	line-height: 1.5em;
 	font-size: 18px;
+}
+.article-content sup {
+	vertical-align: super;
+	font-size: x-small;
 }
 .article-content > ol, ul {
 	font-family: 'Open Sans', sans-serif;
@@ -208,25 +216,19 @@ blockquote {
 *********************************************/
 .article-sharing {
 	margin-top: 0 auto;
+	padding-top: 10px;
 	padding-bottom: 10px;
 }
-.article-sharing ul { margin: 0 0 0 0 !important; }
+.article-sharing ul {
+	margin: 0 0 0 0 !important;
+	line-height: 10px; 
+}
 .article-sharing ul li {
 	margin: 0 0 0 0 !important;
-	display: inline;
+	padding: 0 2px 0 2px;
+	float: left;
+	position: relative;
 }
-
-
-/* Mailchimp
-**************************************/
-#mc_embed_signup {
-	background: #fff;
-	clear: left;
-	width: 650px;
-}
-
-#mc_embed_signup input.button { visibility: visible !important; }
-
 
 /* Code Formatting
 **************************************/
@@ -453,7 +455,4 @@ div.prompt { display: none; }
 		text-align: center;
 		float: none !important;
 	}
-
-	#mc_embed_signup { width: 100%; }
-	#mc_embed_signup input.button { width: 50%; }
 }
