--- a/templates/base.html
+++ b/templates/base.html
@@ -21,7 +21,7 @@
 
   <!-- Fonts
   ================================================== -->
-  <link href='http://fonts.googleapis.com/css?family=Open+Sans|Merriweather|Source+Code+Pro' rel='stylesheet' type='text/css'>
+  <link href='http://fonts.googleapis.com/css?family=Roboto+Slab|Source+Sans+Pro|Lato|Source+Code+Pro|Inconsolata' rel='stylesheet' type='text/css'>
   <link href='https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css' rel='stylesheet' type='text/css'>
 
   <!-- CSS
