--- a/templates/index.html
+++ b/templates/index.html
@@ -17,7 +17,7 @@
 {% block content %}
 <img class="round" src="/images/headshot.jpg" alt="{{ SITENAME }}">
 
-<h1 class="article-title">{{ ABOUT_PAGE_HEADER }}</h1>
+<h1 class="index-title">{{ ABOUT_PAGE_HEADER }}</h1>
   <div class="article-content">
     {% for page in pages %}
         {% if page.title == 'About' %}
