--- a/templates/article.html
+++ b/templates/article.html
@@ -38,12 +38,15 @@
   ================================================================== -->
   <h1 class="article-title"><a href="/{{ article.url }}" title="Permalink to {{ article.title }}">{{article.title}}</a></h1>
   <!-- <h3>{{ article.category }}</h3> -->
-  <h5 class="article-date">{{ article.date|strftime('%B %d, %Y') }}
-    {% if article.tags %} | Tags: {% for tag in article.tags %}
-        <a class="tag" href="/{{ tag.url }}" rel="tag" title="Posts tagged with {{ article.tag }}">{{ tag }}</a>
-      {% endfor %}
-    {% endif %}
-  </h5>
+  <h6 class="article-date pull-left">{{ article.date|strftime('%B %d, %Y') }}</h6>
+  <h6 class="article-tags pull-right">
+    {% if article.tags %}
+    {% for tag in article.tags %}
+    <a class="tag" href="/{{ tag.url }}" rel="tag" title="Posts tagged with {{ article.tag }}">{{ tag }}</a>
+    {{ ", " if not loop.last }}
+  {% endfor %}
+{% endif %}
+</h6>
   <hr class="small"></hr>
 
   <!-- Article Content
