--- a/templates/base.html
+++ b/templates/base.html
@@ -67,7 +67,7 @@
 	================================================== -->
 	<div class="container">
     {% include 'navbar.html' %}
-		<section id="content" class="twelve columns">
+		<section id="content" class="ten columns">
 			{% block content %}{% endblock %}
 		</section>
 		{% include 'footer.html' %}
